Hands Off My Block 0.2.0 Full Release!
- Final polishes and first official version release!
- Added FULL NeoForge support, and Quilt is now properly marked as supported
- Added Mod Menu compatibility for ConfigScreenFabric and support for NeoForge's built-in mod menu with ConfigScreenNeoForge
- Renamed all common classes to match the HandsOffMy... naming conventions (cuz it's funny)
- Added icon.png by PurpleSquirrel1503
- Add translation support and en_us.json lang file
- Finalized fabric.mod.json and neoforge.mods.toml
- Added README

--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,32 +1,19 @@
 modLoader = "javafml"
 loaderVersion = "[2,)"
-#issueTrackerURL = ""
+issueTrackerURL = "https://github.com/CoolAid48/Hands-Off-My-Block/issues"
 license = "MIT"
 
 [[mods]]
 modId = "handsoffmyblock"
-version = "${version}"
+version = "0.2.0"
 displayName = "Hands Off My Block"
 authors = "CoolAid48"
+credits = "Mod icon by PurpleSquirrel1503"
 description = '''
-
+Mark workstation blocks and beds to stop villagers from claiming them!
 '''
-#logoFile = ""
 
-[[dependencies.handsoffmyblock]]
-modId = "neoforge"
-type = "required"
-versionRange = "[21,)"
-ordering = "NONE"
-side = "BOTH"
-
-[[dependencies.handsoffmyblock]]
-modId = "minecraft"
-type = "required"
-versionRange = "[1.21.11,)"
-ordering = "NONE"
-side = "BOTH"
-
+logoFile = "assets/handsoffmyblock/icon.png"
 
 [[mixins]]
 config = "handsoffmyblock.mixins.json"
