--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
-mod_version=0.1.0
+mod_version=0.2.0_1.21.11
 maven_group=coolaid
 archives_name=handsoffmyblock
 enabled_platforms=fabric,neoforge
@@ -12,3 +12,4 @@ minecraft_version=1.21.11
 fabric_loader_version=0.18.0
 fabric_api_version=0.141.1+1.21.11
 neoforge_version=21.11.36-beta
+modmenu_version=17.0.0-beta.2
