--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -5,12 +5,12 @@ license = "MIT"
 
 [[mods]]
 modId = "handsoffmyblock"
-version = "0.2.0"
+version = "0.2.1"
 displayName = "Hands Off My Block"
 authors = "CoolAid48"
 credits = "Mod icon by PurpleSquirrel1503"
 description = '''
-Mark workstation blocks and beds to stop villagers from claiming them!
+Mark workstation blocks and beds to stop villagers from claiming them
 '''
 
 logoFile = "assets/handsoffmyblock/icon.png"
